[gd_scene load_steps=8 format=3 uid="uid://dm610ud53sv8x"]

[ext_resource type="Script" path="res://Weapons/GasGrenade/GasGrenade.gd" id="1_g138y"]
[ext_resource type="Texture2D" uid="uid://cpqa6ao2er8qq" path="res://Weapons/Sprites/ToxicSmoke/toxicSmoke.png" id="2_72ny7"]
[ext_resource type="AudioStream" uid="uid://cbum0nrnqqu8c" path="res://Weapons/Sounds/SmokeSound.wav" id="3_nr1n6"]
[ext_resource type="AudioStream" uid="uid://ccy1lo7d1gave" path="res://Weapons/Sounds/ct_fireinhole.wav" id="4_axqm2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51mkc"]
size = Vector2(8, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_ppl30"]
radius = 125.1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5h6xf"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 250.0
gravity = Vector3(0, 0, 0)
damping_min = 200.0
damping_max = 400.0
scale_min = 3.0
scale_max = 5.0

[node name="GasGrenade" type="RigidBody2D"]
script = ExtResource("1_g138y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.453125, 0.3035)
texture = ExtResource("2_72ny7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1.5)
shape = SubResource("RectangleShape2D_51mkc")

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ppl30")

[node name="GasParticles" type="GPUParticles2D" parent="ExplosionArea"]
modulate = Color(0.227451, 0.647059, 0.223529, 1)
emitting = false
amount = 500
process_material = SubResource("ParticleProcessMaterial_5h6xf")
lifetime = 18.0
one_shot = true
speed_scale = 2.0

[node name="NadeWaitTime" type="Timer" parent="."]
wait_time = 2.0

[node name="DamageTicksTimer" type="Timer" parent="."]

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nr1n6")

[node name="throwGrenade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_axqm2")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="NadeWaitTime" to="." method="_on_nade_wait_time_timeout"]
[connection signal="timeout" from="DamageTicksTimer" to="." method="_on_damage_ticks_time_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
